# oak-research

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/migrations/: 0001_initial.sql  0002_auth.sql  0003_source_chunks.sql  0004_answering_pipeline.sql
backend/src/oakresearch/: __init__.py  answering.py  cli.py  db.py  ingestion.py  main.py  settings.py  worker.py
backend/tests/: test_phase10_diagnostics.py  test_phase11_happy_path.py  test_phase12_failure_path.py  test_phase2_schema.py  test_phase3_auth.py  test_phase5_6_config_sources.py  test_phase5_6_http.py  test_phase7_ingestion.py  test_phase8_answering.py  test_phase9_runs.py
web/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: main.test.tsx  main.tsx  styles.css
