[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oakresearch-backend"
version = "0.1.0"
description = "OakResearch API and worker services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "asyncpg>=0.29,<1.0",
  "cryptography>=44,<46",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "pypdf>=5,<6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
oakresearch = "oakresearch.cli:main"
